--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -22,6 +22,7 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
+  CONFIG_FILE: .config
   FEEDS_CONF: feeds.conf.default  
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
